[package]
name = "zkpnl"
version = "0.2.0"
authors = ["0kPN1 <0kPN1@protonmail.com>"]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "1.0.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.40", features = ["preserve_order"] }
rand = "0.6"
merlin = "1.1"
clear_on_drop = "0.2"
base64 = "0.10.1"
rust-crypto = "0.2.36"
toml = "0.5"
linked-hash-map = { version = "0.5.2", features = ["serde_impl"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.3.0"
signatory = "0.13.0"
signatory-dalek = "0.13.0"
reqwest = "0.9.20"
csv = "1.1"

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs", "avx2_backend"]